# core

./: .gitignore  CMakeLists.txt
chotkeys/: application.cpp  application.h  hotkeys.cpp  hotkeys.h  main.cpp
clipboard/: clipboard.cpp
debian/: changelog  control  watch
osd/: CMakeLists.txt  application.h  main.cpp
session/: processmanager.cpp
settings-daemon/theme/: com.yoyo.Theme.xml  thememanager.cpp  thememanager.h
sxhkd/: CMakeLists.txt  sxhkd.c  sxhkd.h
wallpaper-color-pick/: yoyo-wallpaper-color-pick
